# tomos

./: .gitignore  meson.build
example/: color.cpp  disk.cpp  meson.build  metis.cpp  partition.cpp  sparse.cpp  square.msh  triangle.msh  triangles.cpp
include/tomos/: tomos-color.hpp  tomos-engine.hpp  tomos-mesh.hpp  tomos-metis.hpp  tomos-partition.hpp  tomos-sparse.hpp  tomos.hpp
shaders/: tomos.kernel
source/: tomos-color.cpp  tomos-engine.cpp  tomos-mesh.cpp  tomos-partition.cpp  tomos-sparse.cpp
subprojects/: mesh.wrap  tomos-mesh.wrap
tests/: engine.cpp  mesh.cpp  meson.build  metis.cpp  partition.cpp  sparse.cpp
